refactor(client): improve Java code quality and leverage Java 17 APIs (#994)
## Motivation
The client module had a thread-safety bug, resource leaks, dead code,
and depended on the third-party `ipcsocket` library for IPC despite Java
16+ providing native Unix Domain Socket support (JEP 380) that works on
all platforms including Windows 10+.

## Modification
- Replace `ipcsocket`/`Win32NamedPipeSocket`/`UnixDomainSocket` with
Java 17 native `SocketChannel` + `StandardProtocolFamily.UNIX` on all
platforms; remove `ipcsocket` and `jna` dependencies
- Fix `InputPumper` thread safety (`volatile`) and boxed `Boolean` →
primitive
- Fix resource leaks in `Locks.close()`, `FileLock.close()`, and
`Locks.files()`
- Make `Locked` extend `AutoCloseable` for try-with-resources; use in
`Lock.await()`
- Eliminate double-brace initialization; make classes `final` with
`private` fields
- Use `java.nio.file` `Path`/`Files` APIs instead of legacy `File`
- Remove dead code (`isJava9OrAbove`, `WIN32_PIPE_PREFIX`, `ReadFile()`
workaround)
- Fix server entry point: `SjsonnetServerMain` →
`SjsonnetServerRealMain`

## Result
Eliminated 2 external dependencies, unified socket code across
Linux/macOS/Windows, fixed thread-safety bug and 3 resource leak paths.
All tests pass (Scala 3.3.7/2.13.18/2.12.21). End-to-end smoke test
verified.

## References
- [JEP 380: Unix-Domain Socket
Channels](https://inside.java/2021/02/03/jep380-unix-domain-sockets-channels/)